removeDates + change swagger docs for v2
